Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1408

Impala pprof profiling partially broken

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.0
    • Impala 2.3.0
    • None

    Description

      I'm trying to collect CPU profiles using pprof from gperftools. I'm launching a CPU profile from a client machine outside the cluster as follows:

      pprof --text /path/to/impalad http://<hostname>:25000/pprof/profile

      The impalad on <hostname> does generate the raw profile data and write it to a file in <hostname>:/tmp, but nothing is returned to the client machine.

      Attachments

        Activity

          People

            henryr Henry Robinson
            drorke David Rorke
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: