be/src/util/webserver.cc
@@ -116,12 +116,6 @@ enum ResponseCode {
   NOT_FOUND = 404
 };
 
-// Supported HTTP content types
-enum ContentType {
-  HTML,
-  PLAIN
-};
-
 // Builds a valid HTTP header given the response code and a content type.
 string BuildHeaderString(ResponseCode response, ContentType content_type) {
   static const string RESPONSE_TEMPLATE = "HTTP/1.1 $0 $1\r\n"
@@ -362,55 +356,66 @@ int Webserver::BeginRequestCallback(struct sq_connection* connection,
   MonotonicStopWatch sw;
   sw.Start();
 
-  Document document;
-  document.SetObject();
-  GetCommonJson(&document);
-
   // The output of this page is accumulated into this stringstream.
   stringstream output;
-  bool raw_json = (arguments.find("json") != arguments.end());
-  url_handler->callback()(arguments, &document);
-  if (raw_json) {
-    // Callbacks may optionally be rendered as a text-only, pretty-printed Json document
-    // (mostly for debugging or integration with third-party tools).
-    StringBuffer strbuf;
-    PrettyWriter<StringBuffer> writer(strbuf);
-    document.Accept(writer);
-    output << strbuf.GetString();
+  if (!url_handler->use_templates()) {
     content_type = PLAIN;
+    url_handler->raw_callback()(arguments, &output);
   } else {
-    if (arguments.find("raw") != arguments.end()) {
-      document.AddMember(ENABLE_RAW_JSON_KEY, "true", document.GetAllocator());
-    }
-    if (document.HasMember(ENABLE_RAW_JSON_KEY)) {
-      content_type = PLAIN;
-    }
-
-    const string& full_template_path =
-        Substitute("$0/$1/$2", FLAGS_webserver_doc_root, DOC_FOLDER,
-            url_handler->template_filename());
-    ifstream tmpl(full_template_path.c_str());
-    if (!tmpl.is_open()) {
-      output << "Could not open template: " << full_template_path;
-      content_type = PLAIN;
-    } else {
-      stringstream buffer;
-      buffer << tmpl.rdbuf();
-      RenderTemplate(buffer.str(), Substitute("$0/", FLAGS_webserver_doc_root), document,
-          &output);
-    }
+    RenderUrlWithTemplate(arguments, *url_handler, &output, &content_type);
   }
 
   VLOG(3) << "Rendering page " << request_info->uri << " took "
           << PrettyPrinter::Print(sw.ElapsedTime(), TUnit::CPU_TICKS);
 
   const string& str = output.str();
+
   const string& headers = BuildHeaderString(response, content_type);
   sq_printf(connection, headers.c_str(), (int)str.length());
 
   // Make sure to use sq_write for printing the body; sq_printf truncates at 8kb
   sq_write(connection, str.c_str(), str.length());
   return PROCESSING_COMPLETE;
+}
+
+void Webserver::RenderUrlWithTemplate(const ArgumentMap& arguments,
+    const UrlHandler& url_handler, stringstream* output, ContentType* content_type) {
+  Document document;
+  document.SetObject();
+  GetCommonJson(&document);
+
+  bool raw_json = (arguments.find("json") != arguments.end());
+  url_handler.callback()(arguments, &document);
+  if (raw_json) {
+    // Callbacks may optionally be rendered as a text-only, pretty-printed Json document
+    // (mostly for debugging or integration with third-party tools).
+    StringBuffer strbuf;
+    PrettyWriter<StringBuffer> writer(strbuf);
+    document.Accept(writer);
+    (*output) << strbuf.GetString();
+    *content_type = PLAIN;
+  } else {
+    if (arguments.find("raw") != arguments.end()) {
+      document.AddMember(ENABLE_RAW_JSON_KEY, "true", document.GetAllocator());
+    }
+    if (document.HasMember(ENABLE_RAW_JSON_KEY)) {
+      *content_type = PLAIN;
+    }
+
+    const string& full_template_path =
+        Substitute("$0/$1/$2", FLAGS_webserver_doc_root, DOC_FOLDER,
+            url_handler.template_filename());
+    ifstream tmpl(full_template_path.c_str());
+    if (!tmpl.is_open()) {
+      (*output) << "Could not open template: " << full_template_path;
+      *content_type = PLAIN;
+    } else {
+      stringstream buffer;
+      buffer << tmpl.rdbuf();
+      RenderTemplate(buffer.str(), Substitute("$0/", FLAGS_webserver_doc_root), document,
+          output);
+    }
+  }
 }
 
 void Webserver::RegisterUrlCallback(const string& path,
@@ -422,6 +427,15 @@ void Webserver::RegisterUrlCallback(const string& path,
 
   url_handlers_.insert(
       make_pair(path, UrlHandler(callback, template_filename, is_on_nav_bar)));
+}
+
+void Webserver::RegisterUrlCallback(const string& path, const RawUrlCallback& callback) {
+  upgrade_lock<shared_mutex> lock(url_handlers_lock_);
+  upgrade_to_unique_lock<shared_mutex> writer_lock(lock);
+  DCHECK(url_handlers_.find(path) == url_handlers_.end())
+      << "Duplicate Url handler for: " << path;
+
+  url_handlers_.insert(make_pair(path, UrlHandler(callback)));
 }
 
 }
